[package]
name = "is_available"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A CLI tool to check a rust crate is available or not."
documentation = "https://github.com/iAziz786/is_available"
repository = "https://github.com/iAziz786/is_available"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
